crates/ark/src/console/snapshots/ark__console__console_annotate__tests__inject_breakpoints_multiple_lists.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
x <- 1
f <- function() {
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 4 "file:///test.R"
  y <- 2
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 4L, 5L))
#line 5 "file:///test.R"
  z <- 3
}
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///test.R", 3L, 7L))

base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "2"))
#line 7 "file:///test.R"
w <- 4
}
